# pbsg

./: .env.example  .gitignore  KNOWN_ISSUES.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: format-check.yml  test.yml
docs/: bollinger_bands.md  fair_value_gaps.md  ichimoku_cloud.md  key_levels.md  macd.md  market_structure.md  rsi.md  stochastic_oscillator.md  volume_profile.md
scripts/: clean_test_db.py  e2e_test_kraken.py  seed_test_data.py  setup_test_db.py
scripts/python/: clean_test_db.py  data_integrity_check.py  e2e_test_kraken.py  kraken_backfill.py  run_dashboard.py  seed_test_data.py  setup_test_db.py
src/config/: settings.py
src/models/: database.py  init_db.py  schema.py
src/services/: dash_service.py
src/services/dashboard/: __init__.py  components.py  dashboard_service.py  data_manager.py
src/services/data_sources/: __init__.py  backpressure.py  base.py  integrated_storage.py  kraken.py  storage.py  transformer.py  types.py
src/services/data_sources/kraken/: __init__.py  backfill.py  kraken.py  transformer.py
tests/: conftest.py
tests/integration/: test_database_integration.py  test_websocket_integration.py
tests/unit/: test_base_websocket_handler.py  test_integrated_storage.py  test_kraken_websocket.py  test_models.py  test_transformer.py  test_types.py
