[project]
name = "pbsg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets",
    "httpx",
    "celery",
    "psycopg2-binary",
    "asyncpg",
    "sqlalchemy",
    "pandas",
    "numpy",
    "TA-Lib",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "loguru",
    "python-telegram-bot",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
